Major classes added

--- a/Final Exam.ipynb
+++ b/Final Exam.ipynb
@@ -8,11 +8,342 @@
     "## Final Exam in Programming, Algorithms and Data Structures\n",
     "### Daniel Henke, 176182"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Customer Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "#using abstract class to define general customer class that will be inherited by other classes\n",
+    "\n",
+    "class Customer(ABC):\n",
+    "    @abstractmethod\n",
+    "    def init(self, name, customer_id, customer_type, discount=0):\n",
+    "        self.name = name\n",
+    "        self.customer_id = customer_id\n",
+    "        self.customer_type = customer_type\n",
+    "        self.discount = discount\n",
+    "        self.balance = 0\n",
+    "        self.orders = []\n",
+    "    \n",
+    "    def str(self):\n",
+    "        if self.customer_id == None:\n",
+    "            return f\"{self.name} ({self.customer_type})\"   \n",
+    "        else:\n",
+    "            return f\"{self.name} - {self.customer_id} ({self.customer_type})\"    \n",
+    "    \n",
+    "    def view_menu(self, cafeteria):\n",
+    "        \"\"\"Lets the customer view the menu of a cafeteria and the prices of the items after applying the discount.\n",
+    "\n",
+    "        Args:\n",
+    "            cafeteria (object): the cafeteria object whose menu the customer wants to view\n",
+    "        \"\"\"\n",
+    "        print(f\"Menu for {cafeteria.name}:\")\n",
+    "        for item, details in cafeteria.menu.items():\n",
+    "            print(f\"{item}: {details['price']*(1-(self.discount//100))}dkk ({details['quantity']} available)\")\n",
+    "    \n",
+    "    def view_detailed_menu(self, cafeteria):\n",
+    "        \"\"\"Lets the customer view the detailed menu of a cafeteria.\n",
+    "\n",
+    "        Args:\n",
+    "            cafeteria (object): the cafeteria object whose menu the customer wants to view\n",
+    "        \"\"\"\n",
+    "        print(f\"Menu for {cafeteria.name}:\")\n",
+    "        for item, details in cafeteria.menu.items():\n",
+    "            print(f\"{item}: {details['description']}\")\n",
+    "            print(f\"{details['price']}dkk ({details['quantity']} available)\")\n",
+    "    \n",
+    "    def add_balance(self, amount):\n",
+    "        \"\"\"Adds balance to the account.\n",
+    "\n",
+    "        Args:\n",
+    "            amount (int): the amount to be added to the balance\n",
+    "        \"\"\"\n",
+    "        self.balance+=amount\n",
+    "        print(f\"${amount} added to the balance of {self.name}\")\n",
+    "         \n",
+    "    def place_order(self, cafeteria, item, quantity):\n",
+    "        \"\"\"Places an order in a cafeteria.\n",
+    "\n",
+    "        Args:\n",
+    "            cafeteria (object): the cafeteria object where the order is to be placed\n",
+    "            item (string): the item to be ordered\n",
+    "            quantity (int): number of items to be ordered\n",
+    "        \"\"\"\n",
+    "        if item in cafeteria.menu:\n",
+    "            #calculating the price after discount for full order           \n",
+    "            price = cafeteria.menu[item]['price']*quantity*(1-(self.discount//100))\n",
+    "            if self.balance < price:\n",
+    "                raise ValueError(f\"Sorry, you do not have enough balance to place this order\")\n",
+    "            \n",
+    "            #placing the order with the cafeteria\n",
+    "            order=cafeteria.process_order(self.customer_id, item, quantity, self.discount)\n",
+    "            \n",
+    "            #updating the balance based on the actual order (may be lower quantity)\n",
+    "            self.balance-=order.price\n",
+    "            self.orders.append(order)\n",
+    "            print(f\"Order placed by {self.name} for {order.quantity} {item}(s) for ${order.price}\")\n",
+    "                \n",
+    "        else:\n",
+    "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Student\n",
+    "The first subclass of customer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student(Customer):\n",
+    "    def __init__(self, name, student_id):\n",
+    "        super().__init__(name, student_id, \"Student\", 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Staff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Staff(Customer):\n",
+    "    def __init__(self, name, staff_id):\n",
+    "        super().__init__(name, staff_id, \"Staff\", 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Guest\n",
+    "Guests cannot order online and have no account. They can merely view the menu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Guest(Customer):\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name, None, \"Guest\", 0)\n",
+    "    \n",
+    "    def place_order(self, cafeteria, item, quantity):\n",
+    "        raise PermissionError(\"Guests cannot place orders online. Please book in person.\")\n",
+    "    \n",
+    "    def add_balance(self, amount):\n",
+    "        raise PermissionError(\"Guests do not have a balance to add to.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cafeteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cafeteria:\n",
+    "    def __init__(self, name, university):\n",
+    "        self.name = name\n",
+    "        self.university = university\n",
+    "        self.menu = {}\n",
+    "        self.orders = []\n",
+    "        self.item_popularity = {}\n",
+    "        \n",
+    "    def add_item(self, item, description, price, quantity):\n",
+    "        \"\"\"Adds an item to the menu of the cafeteria.\n",
+    "\n",
+    "        Args:\n",
+    "            item (string): the name of the item\n",
+    "            description (string): the description of the item\n",
+    "            price (int): the price of the item\n",
+    "            quantity (int): the quantity of the item available\n",
+    "        \"\"\"\n",
+    "        self.menu[item] = {'description': description, 'price': price, 'quantity': quantity}\n",
+    "        self.university\n",
+    "        \n",
+    "    \n",
+    "    def upload_menu(self, menu):\n",
+    "        \"\"\"Uploads the menu to the cafeteria.\n",
+    "\n",
+    "        Args:\n",
+    "            menu (dict): a dictionary containing the items and their details\n",
+    "        \"\"\"\n",
+    "        self.menu = menu\n",
+    "        \n",
+    "    def update_item(self, item, description, price, quantity):\n",
+    "        \"\"\"Updates the price and quantity of an item in the menu\n",
+    "        Args:\n",
+    "            item (string): the name of the item\n",
+    "            description (string): the new description of the item\n",
+    "            price (int): the new price of the item\n",
+    "            quantity (int): the new quantity of the item\n",
+    "        \"\"\"\n",
+    "        if item in self.menu:\n",
+    "            self.menu[item]['description'] = description\n",
+    "            self.menu[item]['price'] = price\n",
+    "            self.menu[item]['quantity'] = quantity\n",
+    "        else:\n",
+    "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
+    "        \n",
+    "    def restock_item(self, item, quantity):\n",
+    "        \"\"\"Restocks an item in the menu.\n",
+    "\n",
+    "        Args:\n",
+    "            item (string): the name of the item\n",
+    "            quantity (int): the quantity to be added to the stock\n",
+    "        \"\"\"\n",
+    "        if item in self.menu:\n",
+    "            self.menu[item]['quantity']+=quantity\n",
+    "        else:\n",
+    "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
+    "        \n",
+    "    def remove_item(self, item):\n",
+    "        \"\"\"Removes an item from the menu.\n",
+    "\n",
+    "        Args:\n",
+    "            item (string): the name of the item\n",
+    "        \"\"\"\n",
+    "        if item in self.menu:\n",
+    "            self.menu.pop(item)\n",
+    "        else:\n",
+    "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
+    "    \n",
+    "    def process_order(self, customer_id, item, quantity, discount=0):\n",
+    "        \"\"\"Processes an order placed by a customer.\n",
+    "\n",
+    "        Args:\n",
+    "            customer_id (int): the id of the customer placing the order\n",
+    "            item (string): the item to be ordered\n",
+    "            quantity (int): number of items to be ordered\n",
+    "\n",
+    "        Returns:\n",
+    "            object: the order object\n",
+    "        \"\"\"\n",
+    "        if item in self.menu:\n",
+    "            if self.menu[item]['quantity'] < quantity and self.menu[item]['quantity'] > 0:\n",
+    "                print(f\"Sorry, only {self.menu[item]['quantity']} {item}(s) available\")\n",
+    "                quantity = self.menu[item]['quantity']\n",
+    "            elif self.menu[item]['quantity'] == 0:\n",
+    "                raise ValueError(f\"Sorry, {item} is out of stock\")\n",
+    "            \n",
+    "            order = Order(customer_id, item, quantity, self.menu[item]['price'], discount)\n",
+    "            self.menu[item]['quantity']-=quantity\n",
+    "            if item not in self.item_popularity:\n",
+    "                self.item_popularity[item] = 0\n",
+    "            self.item_popularity[item] += quantity\n",
+    "            self.orders.append(order)\n",
+    "            self.print_orders()\n",
+    "            return order\n",
+    "        else:\n",
+    "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
+    "        \n",
+    "    def print_orders(self):\n",
+    "        \"\"\"Prints all the orders placed in the cafeteria.\"\"\"\n",
+    "        print(f\"Orders in {self.name}:\")\n",
+    "        for order in self.orders:\n",
+    "            print(order)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def popular_items(self, n):\n",
+    "        \"\"\"Prints the n most popular items in the cafeteria.\n",
+    "\n",
+    "        Args:\n",
+    "            n (int): the number of items to be printed\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        def merge_sort(items):\n",
+    "            if len(items) <= 1:\n",
+    "                return items\n",
+    "\n",
+    "            # Split into two halves\n",
+    "            mid = len(items) // 2\n",
+    "            left_half = merge_sort(items[:mid])\n",
+    "            right_half = merge_sort(items[mid:])\n",
+    "\n",
+    "            # Merge sorted halves\n",
+    "            return merge(left_half, right_half)\n",
+    "\n",
+    "        def merge(left, right):\n",
+    "            sorted_items = []\n",
+    "            while len(left)>0 and len(right)>0:\n",
+    "                # Compare the second element (popularity)\n",
+    "                if left[0][1] >= right[0][1]:\n",
+    "                    sorted_items.append(left.pop(0))\n",
+    "                else:\n",
+    "                    sorted_items.append(right.pop(0))\n",
+    "\n",
+    "            # Append any remaining items\n",
+    "            if len(left) > 0:\n",
+    "                sorted_items.extend(left)\n",
+    "            elif len(right) > 0:\n",
+    "                sorted_items.extend(right)\n",
+    "            return sorted_items\n",
+    "                \n",
+    "        \n",
+    "        # Convert dictionary to a list of tuples (item, popularity)\n",
+    "        items = list(self.item_popularity.items())\n",
+    "        # Sort using merge sort\n",
+    "        sorted_items = merge_sort(items)\n",
+    "        # Return the top N items\n",
+    "        return sorted_items[:n]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
