--- a/Final Exam.ipynb
+++ b/Final Exam.ipynb
@@ -181,6 +181,7 @@
     "        self.menu = {}\n",
     "        self.orders = []\n",
     "        self.item_popularity = {}\n",
+    "        self.revenue=0\n",
     "        \n",
     "    def add_item(self, item, description, price, quantity):\n",
     "        \"\"\"Adds an item to the menu of the cafeteria.\n",
@@ -192,7 +193,7 @@
     "            quantity (int): the quantity of the item available\n",
     "        \"\"\"\n",
     "        self.menu[item] = {'description': description, 'price': price, 'quantity': quantity}\n",
-    "        self.university\n",
+    "        self.university.update_sorted_menu(item, quantity, self.name, description, price)\n",
     "        \n",
     "    \n",
     "    def upload_menu(self, menu):\n",
@@ -202,6 +203,7 @@
     "            menu (dict): a dictionary containing the items and their details\n",
     "        \"\"\"\n",
     "        self.menu = menu\n",
+    "        self.university.is_sorted = False\n",
     "        \n",
     "    def update_item(self, item, description, price, quantity):\n",
     "        \"\"\"Updates the price and quantity of an item in the menu\n",
@@ -215,6 +217,7 @@
     "            self.menu[item]['description'] = description\n",
     "            self.menu[item]['price'] = price\n",
     "            self.menu[item]['quantity'] = quantity\n",
+    "            self.university.is_sorted = False\n",
     "        else:\n",
     "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
     "        \n",
@@ -227,6 +230,7 @@
     "        \"\"\"\n",
     "        if item in self.menu:\n",
     "            self.menu[item]['quantity']+=quantity\n",
+    "            self.university.update_sorted_menu(item, self.menu[item]['quantity'], self.name, self.menu[item]['description'], self.menu[item]['price'])\n",
     "        else:\n",
     "            raise ValueError(f\"Sorry, {item} is not available in the menu\")\n",
     "        \n",
@@ -259,8 +263,7 @@
     "            elif self.menu[item]['quantity'] == 0:\n",
     "                raise ValueError(f\"Sorry, {item} is out of stock\")\n",
     "            \n",
-    "            order = Order(customer_id, item, quantity, self.menu[item]['price'], discount)\n",
-    "            self.menu[item]['quantity']-=quantity\n",
+    "            order = Order(self, customer_id, item, quantity, self.menu[item]['price'], discount)\n",
     "            if item not in self.item_popularity:\n",
     "                self.item_popularity[item] = 0\n",
     "            self.item_popularity[item] += quantity\n",
@@ -275,8 +278,45 @@
     "        print(f\"Orders in {self.name}:\")\n",
     "        for order in self.orders:\n",
     "            print(order)\n",
+    "            \n",
     "    \n",
+    "    def complete_order(self, order_id):\n",
+    "        \"\"\"Completes an order placed by a customer.\n",
+    "\n",
+    "        Args:\n",
+    "            order (int): the order object to be completed\n",
+    "        \"\"\"\n",
+    "        for order in self.orders:\n",
+    "            if order.order_id == order_id:\n",
+    "                self.orders.remove(order)\n",
+    "                self.menu[order.item]['quantity']-=order.quantity\n",
+    "                self.university.update_sorted_menu(order.item, order.quantity, self.name)\n",
+    "                self.revenue+=order.price\n",
+    "                order.complete()\n",
+    "        return f\"Order {order_id} not found\"\n",
+    "        \n",
     "    \n",
+    "    def cancel_order(self, order_id):\n",
+    "        \"\"\"Cancels an order placed by a customer.\n",
+    "\n",
+    "        Args:\n",
+    "            order (int): the order object to be cancelled\n",
+    "        \"\"\"\n",
+    "        for order in self.orders:\n",
+    "            if order.order_id == order_id:\n",
+    "                self.orders.remove(order)\n",
+    "                order.cancel()\n",
+    "        return f\"Order {order_id} not found\"\n",
+    "    \n",
+    "    def close_cafeteria(self):\n",
+    "        \"\"\"Closes the cafeteria for the day and prints the revenue generated.\"\"\"\n",
+    "        print(f\"Revenue generated today by {self.name}: ${self.revenue}\")\n",
+    "        for order in self.orders:\n",
+    "            order.cancel()\n",
+    "        self.item_popularity = {}\n",
+    "        self.menu = {}\n",
+    "        self.university.is_sorted = False\n",
+    "        self.revenue = 0\n",
     "    \n",
     "    def popular_items(self, n):\n",
     "        \"\"\"Prints the n most popular items in the cafeteria.\n",
@@ -319,12 +359,69 @@
     "        # Sort using merge sort\n",
     "        sorted_items = merge_sort(items)\n",
     "        # Return the top N items\n",
-    "        return sorted_items[:n]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        return sorted_items[:n]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Order:\n",
+    "    class_counter=1\n",
+    "    def __init__(self, cafeteria, customer_id, item, quantity, price, discount=0):\n",
+    "        self.order_id = Order.class_counter\n",
+    "        self.cafeteria = cafeteria\n",
+    "        self.customer_id = customer_id\n",
+    "        self.item = item\n",
+    "        self.quantity = quantity\n",
+    "        self.price = price*quantity*(1-(discount//100))\n",
+    "        #for simplicity, we assume all orders are accepted as the check is done before creating the order\n",
+    "        self.status = \"Accepted\"\n",
+    "        Order.class_counter+=1\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"Order {self.order_id} by {self.customer_id} for {self.quantity} {self.item}(s) for {self.price}dkk\"\t\n",
+    "    \n",
+    "    def total_price(self):\n",
+    "        return self.price\n",
+    "    \n",
+    "    def complete(self):\n",
+    "        self.status = \"Completed\"\n",
+    "        print(f\"Order {self.order_id} completed\")\n",
+    "    \n",
+    "    def cancel(self):\n",
+    "        self.status = \"Cancelled\"\n",
+    "        #Refund\n",
+    "        for student in self.cafeteria.university.students:\n",
+    "            if student.customer_id == self.customer_id:\n",
+    "                student.balance+=self.price\n",
+    "        print(f\"Order {self.order_id} cancelled\")\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### University\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
