--- a/Final Exam.ipynb
+++ b/Final Exam.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
     "            price (int): the price of the item\n",
     "            quantity (int): the quantity of the item available\n",
     "        \"\"\"\n",
-    "        self.menu[item] = {'description': description, 'price': price, 'quantity': quantity}\n",
+    "        self.menu[item] = {'description': description, 'price': price, 'quantity': quantity, 'cafeteria': self.name}\n",
     "        self.university.update_sorted_menu(item, quantity, self.name, description, price)\n",
     "        \n",
     "    \n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,9 +401,9 @@
     "    def cancel(self):\n",
     "        self.status = \"Cancelled\"\n",
     "        #Refund\n",
-    "        for student in self.cafeteria.university.students:\n",
-    "            if student.customer_id == self.customer_id:\n",
-    "                student.balance+=self.price\n",
+    "        for customer in self.cafeteria.university.all_customers():\n",
+    "            if customer.customer_id == self.customer_id:\n",
+    "                customer.balance+=self.price\n",
     "        print(f\"Order {self.order_id} cancelled\")\n",
     "        \n",
     "    "
@@ -418,10 +418,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class University:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.cafeterias = []\n",
+    "        self.students = []\n",
+    "        self.staff = []\n",
+    "        self.sorted_menu = []\n",
+    "        self.is_sorted = False\n",
+    "        \n",
+    "    def add_student(self, name, student_id):\n",
+    "        student = Student(name, student_id)\n",
+    "        self.students.append(student)\n",
+    "        return student\n",
+    "    \n",
+    "    def add_staff(self, name, staff_id):\n",
+    "        staff = Staff(name, staff_id)\n",
+    "        self.staff.append(staff)\n",
+    "        return staff\n",
+    "    \n",
+    "    def all_customers(self):\n",
+    "        return self.students + self.staff\n",
+    "    \n",
+    "    def add_cafeteria(self, name):\n",
+    "        cafeteria = Cafeteria(name, self)\n",
+    "        self.cafeterias.append(cafeteria)\n",
+    "        return cafeteria\n",
+    "    \n",
+    "    def update_sorted_menu(self, item, quantity, cafeteria_name, description=None, price=None):\n",
+    "        \"\"\"Updates the sorted menu of the university.\n",
+    "\n",
+    "        Args:\n",
+    "            item (string): the name of the item\n",
+    "            quantity (int): the quantity of the item available\n",
+    "            cafeteria_name (string): the name of the cafeteria\n",
+    "            description (string): the description of the item\n",
+    "            price (int): the price of the item\n",
+    "        \"\"\"\n",
+    "        if self.is_sorted:\n",
+    "            for i in range(len(self.sorted_menu)):\n",
+    "                if self.sorted_menu[i][0] == item:\n",
+    "                    # Remove the item from the list\n",
+    "                    prev_item = self.sorted_menu.pop(i)\n",
+    "\n",
+    "                    # Re-insert the item at the correct position\n",
+    "                    j = len(self.sorted_menu) - 1\n",
+    "                    while j >= 0 and self.sorted_menu[j][0] > item[0]:\n",
+    "                        j -= 1\n",
+    "                    if description == None:\n",
+    "                        self.sorted_menu.insert(j + 1, (item, prev_item[1], prev_item[2], quantity, cafeteria_name))\n",
+    "                    else:\n",
+    "                        self.sorted_menu.insert(j + 1, (item,  description, price, quantity, cafeteria_name))\n",
+    "                    break\n",
+    "        \n",
+    "    def view_sorted_menu(self):\n",
+    "        \"\"\"Prints the sorted menu of the university.\"\"\"\n",
+    "        if not self.is_sorted:\n",
+    "            self.sort_menu()\n",
+    "        print(f\"Sorted Menu for {self.name}:\")\n",
+    "        for item in self.sorted_menu:\n",
+    "            print(f\"{item[0]}:\")\n",
+    "            print(f\"  {item[4]}: {item[1]} - {item[2]}dkk ({item[3]} available)\")\n",
+    "    \n",
+    "    def sort_menu(self):\n",
+    "        \"\"\"\n",
+    "        Generates a sorted complete menu using insertion sort and updates the cache.\n",
+    "        :return: The sorted complete menu.\n",
+    "        \"\"\"\n",
+    "        complete_menu = []\n",
+    "\n",
+    "\n",
+    "        #\n",
+    "        \n",
+    "        i=0\n",
+    "        # Sort using insertion sort\n",
+    "        for cafeteria in self.cafeterias:\n",
+    "   \n",
+    "            for name in cafeteria.menu.keys():\n",
+    "                item=(name, cafeteria.menu[name]['description'], cafeteria.menu[name]['price'],cafeteria.menu[name]['quantity'],cafeteria.menu[name]['cafeteria'])\n",
+    "                complete_menu.append(item)\n",
+    "                j=i-1\n",
+    "                while j >= 0 and (complete_menu[j][0] > name or (complete_menu[j][0] == name and complete_menu[j][4]>item[4])):  # Sort by item name\n",
+    "                    complete_menu[j + 1] = complete_menu[j]\n",
+    "                    j -= 1\n",
+    "                complete_menu[j + 1] = item\n",
+    "                i+=1\n",
+    "\n",
+    "        # Update the cache\n",
+    "        self.sorted_menu = complete_menu\n",
+    "        self.is_sorted = True\n",
+    "        return self.sorted_menu\n",
+    "    \n",
+    "    def search_menu(self, item_name):\n",
+    "        \"\"\"Searches for an item in the menu of the university.\n",
+    "\n",
+    "        Args:\n",
+    "            item_name (String): the name of the item to be searched\n",
+    "\n",
+    "        Returns:\n",
+    "            list: a list of tuples containing the item details\n",
+    "        \"\"\"\n",
+    "        # Sort the menu if it is not up-to-date\n",
+    "        if not self.is_sorted:\n",
+    "            self.sort_menu()\n",
+    "\n",
+    "        # Perform binary search\n",
+    "        low, high = 0, len(self.sorted_menu) - 1\n",
+    "        results = []\n",
+    "\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            mid_item = self.sorted_menu[mid][0]\n",
+    "\n",
+    "            if mid_item == item_name:\n",
+    "                # Find all matches\n",
+    "                results.append(self.sorted_menu[mid])\n",
+    "\n",
+    "                # Check neighbors for duplicates\n",
+    "                left, right = mid - 1, mid + 1\n",
+    "                while left >= 0 and self.sorted_menu[left][0] == item_name:\n",
+    "                    results.append(self.sorted_menu[left])\n",
+    "                    left -= 1\n",
+    "                while right < len(self.sorted_menu) and self.sorted_menu[right][0] == item_name:\n",
+    "                    results.append(self.sorted_menu[right])\n",
+    "                    right += 1\n",
+    "                return results\n",
+    "\n",
+    "            elif mid_item < item_name:\n",
+    "                low = mid + 1\n",
+    "            else:\n",
+    "                high = mid - 1\n",
+    "\n",
+    "        return f\"Item '{item_name}' not found in any cafeteria.\"\n",
+    "    \n",
+    "    def close_university(self):\n",
+    "        \"\"\"Closes the university for the day and prints the revenue generated.\"\"\"\n",
+    "        total_revenue = 0\n",
+    "        for cafeteria in self.cafeterias:\n",
+    "            total_revenue += cafeteria.revenue\n",
+    "            cafeteria.close_cafeteria()\n",
+    "        print(f\"Total revenue generated today by {self.name}: ${total_revenue}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Item 'Coffee' not found in any cafeteria.\""
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#creating a university\n",
+    "university = University(\"CBS\")\n",
+    "\n",
+    "#adding a cafeteria to the university\n",
+    "cafeteria1 = university.add_cafeteria(\"Solbjerg Plads\")\n",
+    "cafeteria2 = university.add_cafeteria(\"Dalgas Have\")\n",
+    "cafeteria3 = university.add_cafeteria(\"Kilen\")\n",
+    "cafeteria4 = university.add_cafeteria(\"Porcelænshaven\")\n",
+    "\n",
+    "#adding items to the menu of the cafeterias\n",
+    "daily_menu = { \"Coffee\": {\"description\": \"A standard filter.\", \"price\": 25, \"quantity\": 10},\n",
+    "         \"Tea\": {\"description\": \"A cup of green or black tea\", \"price\": 20, \"quantity\": 15},\n",
+    "         \"Sandwich\": {\"description\": \"A chicken or tomato morzarella sandwich\", \"price\": 35, \"quantity\": 5},\n",
+    "         \"Kannelbullar\": {\"description\": \"A Danish cinnamon bun\", \"price\": 15, \"quantity\": 20},\n",
+    "         \"Croissant\": {\"description\": \"A buttery croissant\", \"price\": 20, \"quantity\": 10},\n",
+    "            \"Salad\": {\"description\": \"A fresh salad with vegetables\", \"price\": 40, \"quantity\": 5}}\n",
+    "\n",
+    "lunch_menu = { \"Pasta\": {\"description\": \"Pasta with tomato sauce\", \"price\": 45, \"quantity\": 10},\n",
+    "            \"Pizza\": {\"description\": \"A slice of pizza\", \"price\": 30, \"quantity\": 15},\n",
+    "            \"Burger\": {\"description\": \"A beef or veggie burger\", \"price\": 50, \"quantity\": 5},\n",
+    "            \"Sushi\": {\"description\": \"A sushi roll\", \"price\": 35, \"quantity\": 20},\n",
+    "            \"Soup\": {\"description\": \"A bowl of soup\", \"price\": 25, \"quantity\": 10}}\n",
+    "\n",
+    "reduced_menu = { \"Pasta\": {\"description\": \"Pasta with tomato sauce\", \"price\": 45, \"quantity\": 10},\n",
+    "            \"Pizza\": {\"description\": \"A slice of pizza\", \"price\": 30, \"quantity\": 5},\n",
+    "            \"Burger\": {\"description\": \"A beef or veggie burger\", \"price\": 50, \"quantity\": 5}}\n",
+    "\n",
+    "drink_menu = { \"Coca Cola\": {\"description\": \"A can of Coca Cola\", \"price\": 15, \"quantity\": 10},\n",
+    "            \"Fanta\": {\"description\": \"A can of Fanta\", \"price\": 15, \"quantity\": 10},\n",
+    "            \"Faxe Kondi\": {\"description\": \"A can of Faxe Kondi\", \"price\": 15, \"quantity\": 10},\n",
+    "            \"Water\": {\"description\": \"A bottle of water\", \"price\": 10, \"quantity\": 10}}\n",
+    "\n",
+    "snack_menu = { \"Chips\": {\"description\": \"A bag of chips\", \"price\": 10, \"quantity\": 10},\n",
+    "            \"Chocolate\": {\"description\": \"A chocolate bar\", \"price\": 10, \"quantity\": 10},\n",
+    "            \"Gum\": {\"description\": \"A pack of gum\", \"price\": 5, \"quantity\": 10},\n",
+    "            \"Popcorn\": {\"description\": \"A bag of popcorn\", \"price\": 15, \"quantity\": 10}}\n",
+    "\n",
+    "university.search_menu(\"Coffee\")\n"
+   ]
   }
  ],
  "metadata": {
